--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,12 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+
     <title>Madison Combs</title>
   </head>
   <body>
@@ -18,7 +22,7 @@
     <div id="root"></div>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
-      AOS.init({ offset: 400, duration: 1000 });
+      AOS.init({ offset: 100, duration: 1000 });
     </script>
   </body>
 </html>
